--- a/style.css
+++ b/style.css
@@ -603,6 +603,130 @@ footer{
   line-height: 1.2;
   margin-right: 65px;
 }
+
+.mobile-view-cont{
+  width: 100%;
+}
+ 
+ .logo-mobile{
+  width: 100%;
+  background-color: #060606;
+  display: grid;
+  grid-template-columns: 50px 50px;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 0px;
+  margin: auto;
+}
+.logo-mobile .bg {
+  background: white;
+  border-radius: 10px;
+  padding: 5px 0px;
+  margin-right: 5px;
+}
+ .logo-mobile .bg i{
+   margin-left: 9px;
+   font-size: 35px;
+   color:  #000000e3;
+ }
+ .logo-mobile a{
+   color:  white;
+   font-size: 25px;
+   text-decoration: none;
+   letter-spacing: -2px;
+ }
+ .about{
+  width: 100%;
+  height: 100px;
+  background-color: #009ddc;
+  text-align: center;
+  color: white;
+  text-transform: uppercase;
+  font-size: 20px;
+  border-bottom: 1px solid #060606;
+ }
+ .solutions{
+  width: 100%;
+  height: 100px;
+  background-color: #009ddc;
+  text-align: center;
+  color: white;
+  text-transform: uppercase;
+  font-size: 20px;
+  padding-top: 40px;
+  font-weight: 300;
+  border-bottom: 1px solid #060606;
+ }
+ .certifications{
+  width: 100%;
+  height: 100px;
+  background-color: #009ddc;
+  text-align: center;
+  color: white;
+  text-transform: uppercase;
+  font-size: 20px;
+  padding-top: 40px;
+  font-weight: 300;
+  border-bottom: 1px solid #060606;
+ }
+ .corporation{
+  width: 100%;
+  height: 100px;
+  background-color: #ff524d;
+  text-align: center;
+  color: white;
+  text-transform: uppercase;
+  font-size: 20px;
+  padding-top: 40px;
+  font-weight: 300;
+  border-bottom: 1px solid #060606;
+ }
+.store{
+  width: 100%;
+  height: 100px;
+  background-color: #7fc027;
+  text-align: center;
+  color: white;
+  text-transform: uppercase;
+  font-size: 20px;
+  padding-top: 40px;
+  font-weight: 300;
+  border-bottom: 1px solid #060606;
+}
+.contact{
+  width: 100%;
+  height: 100px;
+  background-color:#ffc427;
+  text-align: center;
+  color: white;
+  text-transform: uppercase;
+  font-size: 20px;
+  padding-top: 40px;
+  font-weight: 300;
+  border-bottom: 1px solid #060606;
+}
+.socialz{
+  text-align: center;
+  background-color: #060606;
+  width: 100%;
+  height: 150px;
+  padding-top: 40px;
+}
+.socialz i{
+  font-size: 25px;
+  margin-right: 10px;
+  color: #989898;
+  margin-bottom: 10px;
+}
+.termz p{
+  text-align: center;
+  color: white;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+.hidden{
+  display: none;
+}
 @media screen and (max-width:1024px){
   .background-image {
     width: 140%;
@@ -814,7 +938,16 @@ footer{
     width: 232%;
   }
  }
-@media screen and (max-width:425px){
+ @media screen and (max-width:425px) {
+  .hidden{
+    display: block;
+
+  }
+  .block{
+    display: none;
+  }
+}
+/* @media screen and (max-width:425px){
   .background-image{
     width: 332%;
     height: 641px;
@@ -990,7 +1123,8 @@ footer{
   footer{
     width: 398%;
   }
- }
+ } */
+
 
 
 
